--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   fluttertoast: ^8.0.9
   cloud_firestore: ^3.1.15
   flutter_launcher_icons: ^0.9.2
+  smooth_star_rating: ^1.1.1
 
 dev_dependencies:
   flutter_test:
